css/schedule.css
/* ... */
.header__nav-mobile .header__nav-mobile--links .header__dropdown-item:hover {
  color: #0a5be6;
  cursor: pointer !important;
}

.header__nav-desktop {
  display: none;
}

@media only screen and (min-width: 1200px) {
  html {
    font-size: 18px;
  }
  header {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
  }
  header .header__logo-container {
    gap: 0.5vw;
    cursor: pointer;
    text-decoration: none;
  }
  header .header__logo-container .header__logo {
    height: 60px;
    width: 60px;
  }
  header .header__text-logo {
    font-size: 1.4rem !important;
  }
  header .header__nav-desktop--links {
    text-decoration: none;
    color: white;
    font-weight: 500;
    background-color: transparent;
    border: none;
    cursor: pointer;
  }
  header .header__nav-desktop--links:link, header .header__nav-desktop--links:visited, header .header__nav-desktop--links:active {
    text-decoration: none;
  }
  header .header__nav-desktop--links:hover {
    color: #e1e1dd;
  }
  header .header__sub {
    font-size: 0.9rem !important;
  }
  header .header__nav-desktop {
    display: flex;
    flex-flow: row nowrap;
    gap: 5vw;
    align-items: center;
    justify-content: center;
  }
  header .header__nav-mobile {
    display: none;
  }
}
main {
  width: 100%;
  height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
}

.form-container {
  width: 95vw;
  height: 75vh;
  display: flex;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
}
.form-container form {
  display: flex;
  flex-flow: column;
  justify-content: flex-start;
  height: 100%;
  width: 100%;
}
.form-container .form__form-parts {
  /* border: 1px solid black; */
  background-color: rgb(255, 255, 255);
  border-radius: 5px;
  width: 100%;
  box-shadow: 0 0 5px rgba(110, 109, 109, 0.446);
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  height: 85%;
}

.progression {
  width: 95vw;
  height: 50px;
  display: flex;
  flex-flow: row nowrap;
  gap: 0.5vw;
  justify-content: center;
  align-items: flex-end;
  position: relative;
  margin-top: 10px;
}
.progression .initial {
  color: rgb(1, 81, 221);
}
.progression .progression__step {
  background-color: rgb(184, 183, 183);
  /* box-shadow: 0 0 5px rgba(33, 32, 32, 0.585); */
  height: 10%;
  flex-grow: 1;
  /* border-radius: 5px; */
  position: relative;
  transition-duration: 500ms;
  min-height: 5px;
}
.progression .mobile-label {
  position: absolute;
  left: 0;
  bottom: 15px;
  font-weight: 700;
  font-size: 1.5rem;
  transition-duration: 500ms;
  color: rgb(80, 78, 78);
}

.progression__title {
  display: none;
  position: absolute;
  bottom: 5px;
  transition-duration: 500ms;
}

.form__btn-container {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  gap: 2vw;
  margin-top: 10px;
}
.form__btn-container .btn {
  width: 100%;
  padding: 15px;
  border: none;
  border-radius: 10px;
  color: rgb(95, 92, 92);
  min-width: 100px;
  max-width: 500px;
  color: white;
  font-weight: 500;
  font-size: 1.1rem;
}
.form__btn-container .btn-next {
  background-color: rgb(1, 81, 221);
}
.form__btn-container .btn-back {
  background-color: rgb(192, 189, 189);
}
.form__btn-container .btn-next:hover {
  cursor: pointer;
  background-color: rgb(13, 81, 198);
}
.form__btn-container .btn-back:hover {
  cursor: pointer;
  background-color: rgb(168, 169, 170);
}

.progression .answered {
  background-color: rgb(3, 93, 247);
}

.second, .third, .fourth {
  display: none;
}

.first {
  height: 100%;
  width: 100%;
  padding: 3vw 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(35%, 1fr));
  row-gap: max(50px, 3vw);
  justify-items: center;
  align-items: center;
  overflow-y: auto;
}
.first .form__card {
  display: flex;
  flex-flow: column;
  justify-content: space-between;
  align-items: center;
  width: 140px;
  height: 160px;
  border-radius: 20px;
  background-color: white;
  box-shadow: 5px 5px rgb(186, 185, 185);
  border: 3px solid rgb(163, 163, 163);
  padding: 0 1vw;
  transition-duration: 500ms;
}
.first .form__card:hover {
  cursor: pointer;
}
.first .form__img-container {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.first .form__dept-img {
  width: 70%;
  border-radius: 10px;
}
.first .form__dept-title {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 1rem;
  font-weight: 1000;
  background-color: transparent;
  width: 100%;
  height: 100px;
  border-radius: 0 0 10px 10px;
}

.active {
  color: rgb(1, 81, 221);
}

@media only screen and (min-width: 350px) {
  .first {
    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
  }
  .first .form__card {
    width: 140px;
    height: 200px;
  }
}
@media only screen and (min-width: 900px) {
  .form__btn-container {
    flex-flow: row-reverse nowrap;
    justify-content: flex-start;
  }
  .form__btn-container .btn {
    min-width: none;
    max-width: 200px;
    width: 15%;
  }
  .form-container .form__form-parts {
    height: 75vh;
  }
}
input[type=date] {
  border: none;
  box-sizing: border-box;
  outline: 0;
  position: relative;
  width: 100%;
}

input[type=date]::-webkit-calendar-picker-indicator {
  background: transparent;
  bottom: 0;
  color: transparent;
  cursor: pointer;
  height: auto;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: auto;
}
/* ... */

